--- a/packages/components/Button/Button.module.css
+++ b/packages/components/Button/Button.module.css
@@ -7,6 +7,8 @@
 
   padding: 4px 8px;
 
+  text-align: center;
+
   background-color: orange;
   border-radius: 4px;
   box-shadow: 1px 1px chocolate;
